compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/explicitBackingFieldWithJvmField.kt
// RUN_PIPELINE_TILL: FRONTEND

<!JVM_FIELD_PROPERTY_WITH_EXPLICIT_BACKING_FIELD!>@JvmField<!>
val it: List<Int>
    field = mutableListOf()

/* GENERATED_FIR_TAGS: propertyDeclaration */
